🐛 fix(high contrast): high contrast style fix for accordion.

--- a/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-panel.scss
+++ b/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-panel.scss
@@ -29,7 +29,7 @@
 					border-radius: $border-radius-md;
 				}
 
-				@include modifier(no-shadow-content) {
+				@include modifier(content-no-shadow) {
 					border-radius: $border-radius-md;
 				}
 			}
@@ -42,7 +42,7 @@
 		// Block wrapper.
 		@include block($block) {
 			@include element(panel) {
-				@include modifier(content) {
+				@include modifier(content, content-no-shadow) {
 					border: $border-width-sm solid $color-extended-neutral-0;
 				}
 			}
